--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 		
 		<meta name="description" content="A portfolio consisting of
 		the work done by Nick Chamberlain for the purposes of showcasing 
-		varios kinds of work that is done with editng things online.">
+		various kinds of work that is done with editing things online.">
 		<meta name="keywords" content="multimedia, photoshop, video, audio,
 		digital, editing, design, portfolio">
 		
